# uv-cmake-std-example

./: CMakeLists.txt  README.md  build.sh
cmake/: utils.cmake
repo_1/: CMakeLists.txt
repo_1/mod_1/: CMakeLists.txt
repo_1/mod_1/export/: mod_1_public.cc
repo_1/mod_1/mod_1_1/: CMakeLists.txt
repo_1/mod_1/mod_1_1/export/: mod_1_1.hh  mod_1_1_extra.hh
repo_1/mod_1/mod_1_1/src/: mod_1_1.cc  mod_1_1.hh
repo_1/mod_1/mod_1_2/: CMakeLists.txt
repo_1/mod_1/mod_1_2/export/: mod_1_2.hh
repo_1/mod_1/mod_1_2/src/: mod_1_2.cc  mod_1_2.hh
repo_1/mod_1/src/: main.cc
repo_2/: CMakeLists.txt
repo_2/mod_2/: CMakeLists.txt
repo_2/mod_2/export/: mod_2.hh
repo_2/mod_2/src/: mod_2.cc  mod_2.hh
